feat: add PrimeThreads Java implementation and update project documentation and code formatting